src/test/rustdoc-ui/intra-doc/field-ice.stderr
error: incompatible link kind for `Foo::bar`
  --> $DIR/field-ice.rs:5:6
   |
LL | /// [`Foo::bar()`]
   |      ^^^^^^^^^^^^ help: to link to the field, remove the disambiguator: ``Foo::bar``
   |
note: the lint level is defined here
  --> $DIR/field-ice.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this link resolved to a field, which is not a function

error: aborting due to previous error

